# python-app-cookiecutter

./: README.md  cookiecutter.json  requirements.txt
{{ cookiecutter.project_slug }}/: .editorconfig  .pre-commit-config.yaml  Pipfile  main.py  pyproject.toml
