[tool.poetry]
name = "webhook"
version = "0.1.0"
description = ""
authors = ["Anatoly <a.gusev@sparklingtide.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
rope = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
